# Charffle

./: .gitignore  README.md  build.gradle.kts  gradle.properties  main.c  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  native_lib.map.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: LICENSE.md
app/src/main/assets/words/: h_words.txt  j_words.txt  l_words.txt  m_words.txt  o_words.txt  q_words.txt  r_words.txt  s_words.txt  u_words.txt  v_words.txt  x_words.txt  z_words.txt
app/src/main/cpp/: .clangd  README.md  charffle_c.c  shuffle.c
app/src/main/java/com/zeroone/charffle/: CharffleActivity.kt
app/src/main/java/com/zeroone/charffle/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/io/github/iudah/charffle/: CharffleActivity.kt
app/src/main/java/io/github/iudah/charffle/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
words/: a_words.txt  b_words.txt  c_words.txt  d_words.txt  e_words.txt  f_words.txt  g_words.txt  i_words.txt  k_words.txt  n_words.txt  p_words.txt  t_words.txt  w_words.txt  y_words.txt
